# PyExprEngine

./: .clang-format  .gitignore  CMakeLists.txt  framework.plantuml  main.cc  requirements.txt  test.plantuml  test.py  test_ast.py  test_b.py  test_builtins.py  test_restricted.py  vcpkg-configuration.json  vcpkg.json
3rd/qcodeeditor/: CMakeLists.txt
3rd/qcodeeditor/include/internal/: QCodeEditor.hpp
3rd/qcodeeditor/src/internal/: QCodeEditor.cpp
3rd/qtpropertybrowser/src/: qtpropertybrowser.cpp
PyExprEngine/: pyexprengine.cc
demo/: CMakeLists.txt  demo_widget.cc  demo_widget.h  main.cc  mock_equation_group_list_widget.cc  mock_equation_group_list_widget.h  mock_equation_list_widget.cc  mock_equation_list_widget.h
gui/: CMakeLists.txt  equation_browser_widget.cc  equation_editor.cc  equation_editor.h  equation_group_editor.cc  equation_group_editor.h  equation_group_filter_model.cc  equation_group_filter_model.h  equation_language_model.cc  equation_language_model.h  equation_manager_task.cc  equation_manager_task.h  equation_manager_tasks.cc  equation_manager_tasks.h  equation_manager_widget.cc  equation_manager_widget.h  equation_property_item.cc  equation_property_item.h  equation_property_manager.cc  equation_property_manager.h  equation_signals_qt_utils.h  expression_watch_widget.cc  expression_watch_widget.h  variable_inspect_widget.cc  variable_inspect_widget.h  variable_monitor_widget.h  variable_property_browser.cc  variable_property_browser.h  variable_property_manager.cc  variable_property_manager.h
gui/code_editor/: code_editor.cc  code_highlighter.cc  completion_list_model.cc  language_model.cc  language_model.h  python_highlighter.cc  python_highlighter.h
gui/code_editor/resources/: code_editor_resource.qrc
gui/code_editor/resources/languages/: python.xml
gui/debugger/: variable_data_manager.cc  variable_data_manager.h  variable_manager.cc  variable_manager.h  variable_model.cc  variable_model.h  variable_view.cc  variable_view.h
gui/python/converters/: basic_python_converter.cc  basic_python_converter.h  python_property_converter.cc  python_property_converter.h  python_variable_converter.cc  python_variable_converter.h
gui/task/: task.cc  task.h  task_manager.cc  task_manager.h  toast_task_manager.cc
gui/toast/: toast_progress_bar.cc  toast_progress_bar.h
gui/value_model_view/: python_item_builder.cc  python_item_builder.h  value_item.cc  value_item.h  value_item_builder.h  value_tree_model.cc  value_tree_model.h  value_tree_view.cc
src/python/: python_parser_embed.h
tests/: CMakeLists.txt  dependency_graph_test.cc  equation_manager_test.cc  equation_signals_manager_test.cc  expr_context_test.cc  exprvalue_test.cc  py_code_executor_test.cc  py_code_parser_test.cc  py_expr_engine_test.cc  py_parser_test.cc  py_symbol_extractor_test.cc  pybind_cast_test.cc  python_equation_engine_test.cc  python_parser_test.cc  value_test.cc  variable_dependency_graph_test.cc  variable_manager_test.cc
xequation/: CMakeLists.txt
xequation/core/: bitmask.hpp  dependency_graph.cc  dependency_graph.h  equation.cc  equation.h  equation_common.h  equation_engine.h  equation_group.cc  equation_group.h  equation_manager.cc  equation_manager.h  equation_manager_signals.h  equation_signals_manager.h  expr_common.h  value.cc  value.h
xequation/python/: py_code_executor.cc  py_code_executor.h  py_code_parser.cc  py_code_parser.h  py_expr_context.cc  py_expr_context.h  python_common.h  python_equation_context.cc  python_equation_context.h  python_equation_engine.cc  python_equation_engine.h  python_executor.cc  python_executor.h  python_parser.cc  python_parser.h  python_parser.py  python_parser_embed.h  value_pybind_converter.h
xexprengine/: CMakeLists.txt  dependency_graph.cc  dependency_graph.h  eval_result.hpp  event_stamp.h  expr_common.h  expr_context.cc  expr_context.h  expr_engine.h  expr_value.cc  expr_value.h  exprdag.cc  exprdag.h  expression.h  exprvalue.cc  exprvalue.h  optional.h  value.cc  value.h  value.hpp  value_convert.h  value_helper.hpp  variable.cc  variable.h  variable_dependency_graph.cc  variable_dependency_graph.h  variable_factory.cc
xexprengine/core/: dependency_graph.cc  dependency_graph.h  event_stamp.cc  event_stamp.h  expr_common.h  expr_context.cc  expr_context.h  expr_engine.h  type_traits_ext.h  value.h  value_string_converter.h  variable.cc  variable.h  variable_manager.cc  variable_manager.h
xexprengine/python/: py_common.h  py_expr_context.cc  py_expr_context.h  py_expr_engine.cc  py_expr_engine.h  py_module_manager.h  py_parser.cc  py_parser.h  py_restricted_evaluator.cc  py_restricted_evaluator.h  py_symbol_extractor.cc  py_symbol_extractor.h  value_pybind_converter.h
